[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4"
flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
rand = "0.8"
clipboard-win = "4.2.2"
walkdir = "2"
thiserror = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
indoc = "1.0"